# smart_data_hub

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SmartGUI.py  environment.yml  pyproject.toml
.github/workflows/: build.yml  documentation.yml  next_steps.yml
assets/: README.md
database/: README.md  source.bib
database/geometry/: README.md
database/geometry/DE_Crystalline/input/: orientations.csv
database/geometry/DE_Crystalline/output/: Buntsandstein.vtk  Granite.vtk  Muschelkalk.vtk  Zechstein_Anhydrite_sequence1.vtk  Zechstein_Potash_sequence2.vtk  Zechstein_Rocksalt_sequence3.vtk
database/geometry/DE_North_Claystone/input/: orientations.csv  points.csv
database/geometry/DE_North_Claystone/output/: Albian.vtk  Aptian.vtk  Barremian.vtk  Buntsandstein.vtk  Buntsandstein_Muschelkalk.vtk  Quaternary.vtk
database/geometry/DE_Rocksalt/input/: orientations.csv
database/geometry/DE_Rocksalt/output/: Anhydrite.vtk  Buntsandstein.vtk  Carbonate.vtk  Leine_Hauptanhydrit.vtk  Quaternary.vtk  Strassfurt_Potash.vtk  Strassfurt_Rocksalt.vtk  Tertiary.vtk  Tonmittelsalz.vtk
database/geometry/DE_South_Claystone/input/: points.csv
database/geometry/DE_South_Claystone/output/: Jurassic_Lower_sequence2.vtk  Jurassic_Middle_sequence1.vtk  Keuper_sequence1.vtk  Keuper_sequence2.vtk  Kimmeridgian.vtk  Muschelkalk_Lower.vtk  Muschelkalk_Upper.vtk  Opalinus_Clay.vtk  Oxfordian.vtk  Tithonian.vtk
database/rock_property/: README.md
database/rock_property/DE_Crystalline/: Buntsandstein.yaml  Granite.yaml  Muschelkalk.yaml  Zechstein_Anhydrite.yaml  Zechstein_Potash.yaml  Zechstein_Rocksalt.yaml
database/rock_property/DE_North_Claystone/: Albian.yaml  Aptian.yaml  Barremian.yaml  Buntsandstein.yaml  Buntsandstein_Muschelkalk.yaml  Jurassic_Middle.yaml  Jurassic_Upper.yaml  Quaternary.yaml  Valanginian.yaml  Wealden.yaml  Zechstein.yaml
database/rock_property/DE_Rocksalt/: Aller.yaml  Leine_Anhydritmittelsalz.yaml  Leine_Hauptanhydrit.yaml  Leine_Potash.yaml  Leine_Rocksalt.yaml  Stassfurt_Anhydrite_Carbonate.yaml  Strassfurt_Potash.yaml  Strassfurt_Rocksalt.yaml  Tertiary.yaml
database/rock_property/DE_South_Claystone/: Jurassic_Lower_sequence1.yaml  Jurassic_Lower_sequence2.yaml  Jurassic_Middle_sequence2.yaml  Jurassic_Upper.yaml  Keuper_sequence1.yaml  Keuper_sequence2.yaml  Keuper_sequence3.yaml  Muschelkalk_Lower.yaml  Muschelkalk_Middle.yaml  Muschelkalk_Upper.yaml  Opalinus_Clay.yaml  Quaternary.yaml  Tertiary.yaml
database/rock_property/default/: Conglomerate.yaml  Crystalline.yaml  Dolostone.yaml  Limestone.yaml  Mudstone.yaml  Rocksalt.yaml  Sandstone.yaml
database/site/: DE_Crystalline.yaml  DE_North_Claystone.yaml  DE_Rocksalt.yaml  DE_South_Claystone.yaml  README.md
dataset/: README.md  source.bib
dataset/geometry/: README.md
dataset/geometry/DE_Crystalline/input/: points.csv
dataset/geometry/DE_Crystalline/output/: Zechstein_Potash_sequence1.vtk  Zechstein_Rocksalt_sequence1.vtk  Zechstein_Rocksalt_sequence2.vtk
dataset/geometry/DE_North_Claystone/output/: Jurassic_Lower.vtk  Jurassic_Middle.vtk  Valanginian.vtk  Wealden.vtk
dataset/geometry/DE_Rocksalt/input/: points.csv
dataset/geometry/DE_Rocksalt/output/: Aller.vtk
dataset/geometry/DE_South_Claystone/input/: orientations.csv
dataset/geometry/DE_South_Claystone/output/: Jurassic_Lower_sequence1.vtk  (+2 more)
dataset/rock_property/: README.md
dataset/rock_property/DE_Crystalline/: Granite.yaml  Quaternary.yaml  Zechstein_Rocksalt.yaml
dataset/rock_property/DE_North_Claystone/: Hauterivian.yaml
dataset/rock_property/DE_Rocksalt/: Aller.yaml  Leine_Anhydritmittelsalz.yaml  Quaternary.yaml  Stassfurt_Anhydrite_Carbonate.yaml  Strassfurt_Potash.yaml  Tertiary.yaml
dataset/rock_property/DE_South_Claystone/: Jurassic_Upper.yaml  Keuper_sequence2.yaml  Muschelkalk_Middle.yaml  Muschelkalk_Upper.yaml  Opalinus_Clay.yaml
dataset/rock_property/default/: Conglomerate.yaml  Crystalline.yaml  Dolostone.yaml  Limestone.yaml  Mudstone.yaml  Rocksalt.yaml  Sandstone.yaml
dataset/site/: DE_Crystalline.yaml  DE_Rocksalt.yaml  DE_South_Claystone.yaml
docs/: Makefile  conf.py  index.rst  make.bat
src/: add_default.py  data_tagging.py  dataframe2yaml.py  generate_geomodel.py  generate_id.py  generate_initial_default.py  load_path.py  merge_method.py  property2dataframe.py  recommended_CV.py
src/smart_data_hub/: SmartGUI.py  __init__.py  add_default.py  export_data.py  generate_geomodel.py  generate_id.py  generate_initial_default.py  hydraulic2intrinic.py  load_path.py  merge_method.py  property2dataframe.py  recommended_CV.py
src/smart_data_hub/dataset/: RGB_stratigraphy.txt
tests/: test_add_default.py  test_data_tagging.py  test_merge_method.py  test_property_data_validation.py  validate_data.py
(+30 files in other folders)
